# pipecat-supertonic

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: voice-supertonic.py
src/pipecat_supertonic/: __init__.py  tts.py
tests/: test_supertonic_tts.py
